3. Fix OK/Cancel buttons for all Firefox3 dialogs.
4. Removed QTC_MODIFY_MOZILLA_USER_JS cmake option, thsi is now set via the
   QTC_MODIFY_MOZILLA option - as the KDE button order is affeced by the
   instantApply setting. (If the KDE button order is set, and instantApply is
   set to true, then the Firefox prefences dialog's 'Cancel' button has no text!)

0.62.7
------
1. For right-to-left progressbars, make animation go right-to-left - matches KDE.
2. Detect seamonkey as a Mozilla app.
3. Try to determine if a Mozilla app is new, or not, by calling <app> --version
4. Fix OO.o scrollbars when using flat scrollbar buttons.
5. Improve Mozilla and OO.o spin widgets.
6. Fix OO.o comboboxes.
7. Shrink (by 2 pixels) size of Firefox toolbars - but only if '-DQTC_MODIFY_MOZILLA=true'
   is passed to cmake. This modifies your ~/.mozilla/firefox/???.default/chrome/userChrome.css
   file to include /usr/share/themes/QtCurve/mozilla/QtCurve.css file.
8. Fix KDE button order in FireFox 3 dialogs - but only if '-DQTC_MODIFY_MOZILLA=true'
   is passed to cmake.

0.62.6
------
1. Alter meunbar item widths slightly to make more consistent with KDE4.
2. If QTC_NEW_MOZILLA is not set, don't allow faded menuitems for thunderbird -
   these just don't work here. In thunderbird it is not possible to detect if a
   menuitem is on a menubar, or in a popup menu :-(
3. Make file chooser's pathbar buttons more KDE4 like. This is not 100%, as there
   are no ">" arrows. To seperate items a light gray "/" is drawn.
4. Improve entry focus highlight when round>full.
5. Don't use max round for close buttons on GEdit's tabs.

0.62.5
------
1. Use gradient for filled slider - unless appearance is flat/raised.
2. Slightly alter listview header size.
3. Fix white-on-white text of disabled listviews - noticable in synaptic.
4. If a toolbar is disabled, so should the handle be.

0.62.4
------
1. When drawing filled slider groove, use fill colour for border as well.